FIP agg file output_v3

--- a/notebooks/FIP_RCA_BrandLevelAgg.ipynb
+++ b/notebooks/FIP_RCA_BrandLevelAgg.ipynb
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 222,
    "id": "954c4209-6c10-40fd-9b13-4adc06d69ae0",
    "metadata": {},
    "outputs": [],
@@ -2670,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 223,
    "id": "92cbe60a-01b2-4d94-9e74-62f8a414bfe5",
    "metadata": {},
    "outputs": [],
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 224,
    "id": "f08b3511-e84f-447b-91f8-38ee0a0ef36a",
    "metadata": {},
    "outputs": [],
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 225,
    "id": "c47fc0aa-0d91-49f1-8794-7f4385629004",
    "metadata": {},
    "outputs": [],
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 226,
    "id": "615fd62d-4e2b-4df2-baa4-64ebe79b2a5c",
    "metadata": {},
    "outputs": [
@@ -2986,7 +2986,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3005,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 227,
    "id": "42668637-c3ea-4e43-9812-f808dbd6b027",
    "metadata": {},
    "outputs": [],
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 228,
    "id": "ec887271-66b2-45d4-b1b5-ec5ba1b38610",
    "metadata": {},
    "outputs": [],
@@ -3057,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 229,
    "id": "899d10e3-0ecc-4707-9fb7-71e54c5cbba9",
    "metadata": {},
    "outputs": [],
@@ -3114,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 230,
    "id": "89201443-4fa2-49d5-8852-13904e2a8310",
    "metadata": {},
    "outputs": [],
@@ -3135,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 231,
    "id": "3a1f31da-798f-4e8a-9937-8fb7b4df3b05",
    "metadata": {},
    "outputs": [],
@@ -3184,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 232,
    "id": "e5414156-65c8-4821-9846-c3950b42fe65",
    "metadata": {},
    "outputs": [],
@@ -3222,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 233,
    "id": "e329ca05-69dc-42cf-9133-54388b0dcadb",
    "metadata": {},
    "outputs": [],
@@ -3248,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 234,
    "id": "315f841c-18dc-478b-b506-a59cf8bf712e",
    "metadata": {},
    "outputs": [],
@@ -3266,7 +3266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 235,
    "id": "e5d5b982-cfcd-49b8-ae85-59317fb98b71",
    "metadata": {},
    "outputs": [],
@@ -3290,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 236,
    "id": "b933900c-69d2-4bf4-9704-198e4a26edaa",
    "metadata": {},
    "outputs": [],
@@ -3303,14 +3303,17 @@
     "    how=\"left\"\n",
     ")\n",
     "\n",
-    "brand_df[\"Plant_Concentration_%\"] = (\n",
-    "    brand_df[\"Top_Plant_Impact\"] / brand_df[\"Brand_ΔFIP\"].abs()\n",
+    "\n",
+    "brand_df[\"Plant_Concentration_%\"] = np.where(\n",
+    "    brand_df[\"Brand_Abs_Impact\"] > 0,\n",
+    "    brand_df[\"Top_Plant_Impact\"] / brand_df[\"Brand_Abs_Impact\"],\n",
+    "    np.nan\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 237,
    "id": "d4a7f623-cc70-4c6d-9d56-beb8be74d0ff",
    "metadata": {},
    "outputs": [],
@@ -3334,7 +3337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 238,
    "id": "167104d7-fe0f-4848-8c23-013ef5cfcde5",
    "metadata": {},
    "outputs": [],
@@ -3347,14 +3350,16 @@
     "    how=\"left\"\n",
     ")\n",
     "\n",
-    "brand_mt_df[\"Plant_Concentration_%\"] = (\n",
-    "    brand_mt_df[\"Top_Plant_Impact\"] / brand_mt_df[\"Brand_MT_ΔFIP\"].abs()\n",
+    "brand_mt_df[\"Plant_Concentration_%\"] = np.where(\n",
+    "    brand_mt_df[\"Brand_MT_Abs_Impact\"] > 0,\n",
+    "    brand_mt_df[\"Top_Plant_Impact\"] / brand_mt_df[\"Brand_MT_Abs_Impact\"],\n",
+    "    np.nan\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 239,
    "id": "58538858-a627-45db-8ccd-958db3bf0f97",
    "metadata": {},
    "outputs": [],
@@ -3372,7 +3377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 240,
    "id": "d61c218d-e4af-47cb-af39-cee1e51c8576",
    "metadata": {},
    "outputs": [],
@@ -3398,7 +3403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 241,
    "id": "6b05b395-a293-4c2a-9e8d-844e5258131d",
    "metadata": {},
    "outputs": [],
@@ -3441,7 +3446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 242,
    "id": "e719e146-d0e0-44fe-af76-d8b40928f7db",
    "metadata": {},
    "outputs": [],
@@ -3486,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 243,
    "id": "0d558e1e-a978-408d-9233-0d818ef101b7",
    "metadata": {},
    "outputs": [
@@ -3706,7 +3711,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3717,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 244,
    "id": "702339a9-2d84-48fa-8c4f-6d2e83745295",
    "metadata": {},
    "outputs": [
@@ -3735,7 +3740,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3746,7 +3751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 248,
    "id": "af3f3495-14a9-44c1-b8e6-6ae3f78018c5",
    "metadata": {},
    "outputs": [],
@@ -3756,7 +3761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 245,
    "id": "1e5a449f-191e-4eb4-adca-ca5244b47897",
    "metadata": {},
    "outputs": [
@@ -3766,7 +3771,7 @@
        "27.27"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3777,7 +3782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 247,
    "id": "abfbcfce-ed34-4cad-af00-1acdfc7be064",
    "metadata": {},
    "outputs": [
@@ -3809,6 +3814,7 @@
        "      <th>Top_5_SKU_%</th>\n",
        "      <th>Impact_from_Signal_%</th>\n",
        "      <th>Explainability_Score</th>\n",
+       "      <th>Plant_Concentration_%</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3821,6 +3827,7 @@
        "      <td>99.43</td>\n",
        "      <td>0.51</td>\n",
        "      <td>74.90</td>\n",
+       "      <td>99.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>447</th>\n",
@@ -3831,6 +3838,7 @@
        "      <td>49.53</td>\n",
        "      <td>35.80</td>\n",
        "      <td>54.72</td>\n",
+       "      <td>41.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>480</th>\n",
@@ -3841,6 +3849,7 @@
        "      <td>99.95</td>\n",
        "      <td>0.24</td>\n",
        "      <td>75.50</td>\n",
+       "      <td>99.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>513</th>\n",
@@ -3851,6 +3860,7 @@
        "      <td>67.54</td>\n",
        "      <td>88.12</td>\n",
        "      <td>62.56</td>\n",
+       "      <td>87.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>546</th>\n",
@@ -3861,6 +3871,7 @@
        "      <td>100.00</td>\n",
        "      <td>100.00</td>\n",
        "      <td>80.42</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3874,15 +3885,22 @@
        "513        REVLIMID          PACK  BRAND_MATERIAL_TYPE        -79.19   \n",
        "546        REVLIMID           RAW  BRAND_MATERIAL_TYPE        100.00   \n",
        "\n",
-       "     Top_5_SKU_%  Impact_from_Signal_%  Explainability_Score  \n",
-       "90         99.43                  0.51                 74.90  \n",
-       "447        49.53                 35.80                 54.72  \n",
-       "480        99.95                  0.24                 75.50  \n",
-       "513        67.54                 88.12                 62.56  \n",
-       "546       100.00                100.00                 80.42  "
+       "     Top_5_SKU_%  Impact_from_Signal_%  Explainability_Score  \\\n",
+       "90         99.43                  0.51                 74.90   \n",
+       "447        49.53                 35.80                 54.72   \n",
+       "480        99.95                  0.24                 75.50   \n",
+       "513        67.54                 88.12                 62.56   \n",
+       "546       100.00                100.00                 80.42   \n",
+       "\n",
+       "     Plant_Concentration_%  \n",
+       "90                   99.36  \n",
+       "447                  41.39  \n",
+       "480                  99.92  \n",
+       "513                  87.46  \n",
+       "546                 100.00  "
       ]
      },
-     "execution_count": 204,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3899,6 +3917,7 @@
     "        \"Top_5_SKU_%\",\n",
     "        \"Impact_from_Signal_%\",\n",
     "        \"Explainability_Score\",\n",
+    "        \"Plant_Concentration_%\"\n",
     "    ]\n",
     "]\n"
    ]
